# mnemosys-operations

./: AGENTS.md  README.md  pyproject.toml  repository-standards.md  requirements-dev.txt  requirements.txt  standards-and-conventions.md
docs/: overview.md  repository-bootstrap.md  standards-and-conventions.md
docs/aws/: database-environment-setup.md  nonprod-rest-api-deploy-plan.md  test-prod-db-parity-plan.md
docs/decisions/: 0001-application-classification-and-co-release.md  0002-version-alignment-with-mnemosys-core.md  README.md
docs/operations/: 2026-01-12-18-31-nonprod-parity-ops.md  2026-01-13-13-50-deployment-validation.md  2026-01-21-15-50-uv-migration.md
docs/plans/complete/: aws-ops-doc-migration.md
docs/policies/: aws-bootstrap-exceptions.md  aws-db-bootstrap-constraints.md
scripts/: README.md
scripts/dev/: validate_local.py  validate_version.py
src/mnemosys_operations/: __init__.py  cli.py
tests/: README.md
tests/mnemosys_operations/: test_cli_smoke.py
