[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mnemosys-operations"
version = "0.1.0.0"
description = "Operations policy, procedures, and CLI utilities for MNEMOSYS."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Phillip Moore", email = "w.phillip.moore@gmail.com" }]
requires-python = ">=3.14,<4.0"
dynamic = ["dependencies"]

[project.scripts]
mnemosys-ops = "mnemosys_operations.cli:main"

[tool.poetry]
packages = [{ include = "mnemosys_operations", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
pytest-xdist = "*"
poetry = "*"
poetry-plugin-export = "*"
pre-commit = "*"
pip-audit = "*"

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mnemosys_operations"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
